fix(Link): handle inverse variant for standalone links (#2042)
- update documentation to explain cases
- add warning for misaligned prop usages
- update snapshots and tests

--- a/src/components/Link/Link.module.css
+++ b/src/components/Link/Link.module.css
@@ -50,6 +50,10 @@
     text-decoration: none;
   }
 
+  &.link--variant-inverse {
+    color: var(--eds-theme-color-text-utility-inverse);
+  }
+
   /**
    * Sizes - using the presets for type ramp matching body-*
    */
